Fix a bug with dark mode initialisation

--- a/css/application.css
+++ b/css/application.css
@@ -119,7 +119,7 @@ a.in-text {
 
 .dark {
   color: #fbfcff;
-  background: #274a56; }
+  background: #605856; }
   .dark h1 {
     color: inherit; }
 
@@ -691,7 +691,7 @@ section.about-me {
     width: 32vw; }
 
 section.about-me:nth-of-type(1)::after {
-  background: linear-gradient(to left, #274a56, transparent), url() center;
+  background: linear-gradient(to left, #605856, transparent), url() center;
   background-size: cover; }
 
 section.about-me:nth-of-type(2)::after {
@@ -699,7 +699,7 @@ section.about-me:nth-of-type(2)::after {
   background-size: cover; }
 
 section.about-me:nth-of-type(3)::after {
-  background: linear-gradient(to left, #274a56, transparent), url(../img/chess.png) center;
+  background: linear-gradient(to left, #605856, transparent), url(../img/chess.png) center;
   background-size: cover; }
 
 section.about-me:nth-of-type(0) * {
