--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -148,7 +148,7 @@ a.in-text {
 
 .dark {
     color: $white;
-    background: $charcoal;
+    background: $wenge;
     h1 {
         color: inherit;
     }
